--- a/Unit_01/index.html
+++ b/Unit_01/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>태환의 블로그</title>
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
+
     <body>
-        <h1>태환의 블로그에 오신 여러분을 환영합니다.</h1>
+        <h1>태환이의 블로그에 오신 여러분을 환영합니다!</h1>
 
         <div id="root"></div>
-        <!-- 리액트 가져오기 -->
-        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
-        <!-- 리엑트 컴포넌트 가져오기-->
-        <script src="./MyButton.js"></script>
+        <!-- 리액트 가져오기 -->
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorign></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorign></script>
+
+        <!-- 리액트 컴포넌트 가져오기 -->
+        <script src="MyButton.js"></script>
     </body>
 </html>
